test/typeerrors/Examples/ExprEnumFrom.hs
module ExprEnumFrom where

f = [ "aap" .. ]
